# HW-CG

./: .gitignore  README.md
assignment 1/latex code/: cover.tex  main.aux  main.out  main.tex
assignment 3/: 2021632080_zhuzixian_code2  code1  code1.cpp  code2.cpp
assignment 4/: 2021632080_zhuzixian_code1.cpp  code1  code2  code2.cpp
assignment 5/: code1.mov  code1_compile_and_run.sh  code2_compile_and_run.sh
assignment 6/: code1  code1.cpp  code1.mov  code1_compile_and_run.sh  code2  code2.cpp  code2.mov  code2_compile_and_run.sh  code3  code3.cpp  code3_compile_and_run.sh
assignment 7/latex code/: README.md  cover.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.xdv
assignment 8/latex code/: README_CN.md  STUReport.sty  cover.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.xdv
assignment 9/: code1  code1.cpp  code1_complie_and_run.sh  code2  code2.cpp  code2_compile_and_run.sh  code3  code3.cpp  code3_compile_and_run.sh
assignment5/: code1  code1.cpp  code2  code2.cpp  code2.mov
project 1/: CMakeLists.txt  Info.plist  Makefile  OpenGLScreenSaverView.h  OpenGLScreenSaverView.m  README.md  install_env.bat  screensaver.cpp  screensaver.h  start_screensaver.bat  start_screensaver.sh
project 1/output/: screensaver
project 2/: 00ReadMeFirst.txt  IF THIS FOLDER GETS TOO BIG OPEN ME.txt  Makefile  README.md  config.ini  test
project 2/Example/src/: BMPLoader.cpp  BMPLoader.h  MyApp.cpp  MyApp.h  MyBonus.cpp  MyBonus.h  (+25 more)
project 2/OpenGLRacingPOSCADEIRA/: ABOUT DELETED FILES.txt  test
project 2/cglib.vsnet/: cglib.sln
project 2/docs/: Mini project.md  Report templateV3.docx
project 2/textures/: road.raw
(+100 files in other folders)
